# example-for-article

./: .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml  server.sublime-project
app/: crud.py  main.py  models.py  test_main.py
app/test_data/: hero.yaml  hero_team_link.yaml  load_data.py  team.yaml
