[tool.poetry]
name = "server"
version = "0.1.0"
description = "FastAPI server for example app"
authors = ["Dave Parsons <dualrudder@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.85.0"}
sqlmodel = "^0.0.8"
requests = "^2.28.1"
pytest = "^7.1.3"
black = "^22.8.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
mypy = "^0.971"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pyright]
include = "app"
